[package]
name = "launchdarkly-rust-sdk-alt"
version = "0.1.0"
authors = ["Marcus Weiner <marcus.weiner@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.2.0"
bytes = "1.0.1"
eventsource-client = { git = "https://github.com/mraerino/rust-eventsource-client", branch = "refactor/tokio-hyper-errors", path = "../rust-eventsource-client" }
futures = "0.3.12"
hex = "0.4.2"
http = "0.2.3"
hyper = { version = "0.14.4", features = ["stream", "http1", "http2", "client"] }
hyper-rustls = "0.22.1"
pin-project = "1.0.4"
serde = "1.0.123"
serde_json = "1.0.62"
sha-1 = "0.9.3"
thiserror = "1.0.23"
tokio = { version = "1.2.0", features = ["rt", "rt-multi-thread", "macros", "io-util", "signal"] }
tracing = "0.1.23"

[build-dependencies]
paperclip = { version = "0.5", features = ["v2", "codegen"] }
serde = "1.0.123"
serde_json = "1.0.62"
serde_derive = "1.0.123"

